Queueing repo_testing@main
Signed-off-by: Shadichy <shadichy@blisslabs.org>

--- a/.github/workflows/queue.yml
+++ b/.github/workflows/queue.yml
@@ -34,6 +34,6 @@ jobs:
           github_token: ${{ env.PAT }}
           github_user: ${{ env.AUTHOR }}
           workflow_file_name: deploy-pages.yml
-          ref: ${{ env.REF }}
+          ref: main
           trigger_workflow: true
           wait_workflow: false
